# transcribe-mvp

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
media/: simple_sentence.m4a
scribe/: __init__.py  config.py  transcribe.py
static/: index.html
templates/: form.html  index.html  jobs.html  messages.html  transcriptions.html
